alignment fix

--- a/prim.js/style.css
+++ b/prim.js/style.css
@@ -18,7 +18,7 @@ html, body {
 .description {
     font-family: 'IBM Plex Sans Condensed', sans-serif;
     font-size: 20px;
-    text-anchor: left;
+    text-anchor: start;
     fill: gray;
 }
 
